fixed spacing for medium screens

--- a/components/Body/BlogLeft/blogLeft.module.css
+++ b/components/Body/BlogLeft/blogLeft.module.css
@@ -12,7 +12,7 @@
 
     .blogLeftContainer{
       display: flex;
-      height: 22vh;
+      height: 250px;
       max-width: 800px;
       margin: 0.5rem;
       align-items: center;
