--- a/components/Body/BlogLeft/leftBottom.module.css
+++ b/components/Body/BlogLeft/leftBottom.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 350px;
   padding: 0.5rem 0.5rem 1rem;
   margin-bottom: 1rem;
 }
@@ -45,7 +46,7 @@
       height: 18vh;
     }
     .LbBlogBodyDiv{
-      height: calc(2 * var(--lh));
+      height: calc(5 * var(--lh));
     }
 
     .blogBox{
