--- a/components/Body/BlogLeft/leftTop.module.css
+++ b/components/Body/BlogLeft/leftTop.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: max(30vh, 400px);
+  /* height: max(30vh, 400px); */
+  height: 350px;
   padding: 0.5rem 0.5rem 1rem;
   margin-bottom: 1rem;
 }
@@ -48,7 +49,7 @@
       border-right: 1.2px rgba(128, 128, 128, 0.15) solid;
     }
     .LtBlogBodyDiv {
-      height: calc(2 * var(--lh));
+      height: calc(5 * var(--lh));
     }
 
     .blogBox{
