--- a/components/Body/BlogMain/mainBottom.module.css
+++ b/components/Body/BlogMain/mainBottom.module.css
@@ -51,8 +51,7 @@
   and (-webkit-min-device-pixel-ratio: 1) {
 
     .MainBottomContainer{
-      height: 51%;
-      
+      height: max(20vh, 300px);      
     }
 
    .MbImageDiv {
