--- a/components/Body/BlogMain/mainTop.module.css
+++ b/components/Body/BlogMain/mainTop.module.css
@@ -50,7 +50,7 @@
   and (-webkit-min-device-pixel-ratio: 1) {
 
     .MainTopContainer{
-      height: 50%;
+      height: max(20vh, 300px);
     }
 
    .MtImageDiv {
