--- a/components/Body/BlogRight/rightBottom.module.css
+++ b/components/Body/BlogRight/rightBottom.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 350px;
   padding: 0.5rem 0.5rem 1rem;
   margin-bottom: 1rem;
 }
@@ -37,7 +38,7 @@
   and (-webkit-min-device-pixel-ratio: 1) {
 
    .RightBottomContainer{
-     height: 22vh;
+     height: 250px;
      justify-content: center;
    }
    .RbBlogBodyDiv{
