--- a/components/Body/blogBody.module.css
+++ b/components/Body/blogBody.module.css
@@ -4,7 +4,7 @@
   justify-items: center;
   align-items: center;
   padding: 0.25rem;
-  max-height: 1000px;
+  /* max-height: 1000px; */
   box-sizing: border-box;
   border-bottom: 1.2px rgba(128, 128, 128, 0.15) solid;
 
@@ -69,6 +69,11 @@
   and (max-device-width: 1024px) 
   and (-webkit-min-device-pixel-ratio: 1) {
 
+    .blogBodyContainer{
+      height: 1600px;
+      max-height: none;
+
+    }
     .additionalPosts {
       position: relative;
       display: flex;
